--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ button {
     height: 100px;
     border-radius: 50px;
     border: 0;
-    margin: 5px;
+    margin: 10px;
     font-size: 50px;
 }
 
@@ -54,8 +54,8 @@ button:hover {
     filter: brightness(125%);
   }
 button[data-number="0"] {
-    text-indent: -100px;
-    width: 200px;
+    text-indent: -110px;
+    width: 215px;
 }
 
 .number, .decimal {
@@ -68,6 +68,29 @@ button[data-number="0"] {
     color: white;
 }
 
-.function {
+.function, .clear, .percentage, .plus-minus {
     background-color: #D4D4D2;
+}
+
+@media (max-width: 600px)
+{   
+    .display-container{
+        width: 260px;
+    }
+    button {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        font-size: 25px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    button[data-number="0"] {
+        text-indent: -70px;
+        width: 120px;
+    }
+    .bottom-layer{
+        display: flex;
+    }
 }
